# maker-trance-vst2

./: ATUALIZAR-PARA-V1.1.md  ATUALIZAR-PARA-V1.2.md  ATUALIZAR-PARA-V1.3.md  BUILD-STATUS.md  CHANGELOG.md  CMakeLists.txt  CRIAR-WORKFLOW-NO-GITHUB.md  INSTALAR-NO-FL-STUDIO.md  LICENSE-PROJECT.txt  NOTICE-DPF.txt  README.md  WORKFLOW-build-vst2.yml  build-windows.ps1
.github/workflows/: build-vst2.yml
Source/: DistrhoPluginInfo.h  MakerTranceMidi.hpp  MakerTrancePlugin.cpp  MakerTranceShared.hpp  MakerTranceUI.cpp
tools/: test_melody.cpp  validate_project.py
